--- a/output.css
+++ b/output.css
@@ -589,10 +589,6 @@ html {
   }
 }
 
-.fixed{
-  position: fixed;
-}
-
 .absolute{
   position: absolute;
 }
@@ -617,40 +613,17 @@ html {
   right: 1.5rem;
 }
 
-.z-10{
-  z-index: 10;
+.top-1\/3{
+  top: 33.333333%;
 }
 
-.m-4{
-  margin: 1rem;
+.z-10{
+  z-index: 10;
 }
 
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
-}
-
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.mx-16{
-  margin-left: 4rem;
-  margin-right: 4rem;
-}
-
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
 }
 
 .mb-4{
@@ -661,10 +634,6 @@ html {
   margin-bottom: 1.5rem;
 }
 
-.ml-2{
-  margin-left: 0.5rem;
-}
-
 .mr-1{
   margin-right: 0.25rem;
 }
@@ -673,16 +642,8 @@ html {
   margin-right: 1rem;
 }
 
-.mt-10{
-  margin-top: 2.5rem;
-}
-
 .mt-12{
   margin-top: 3rem;
-}
-
-.mt-14{
-  margin-top: 3.5rem;
 }
 
 .mt-4{
@@ -695,34 +656,6 @@ html {
 
 .mt-7{
   margin-top: 1.75rem;
-}
-
-.mt-8{
-  margin-top: 2rem;
-}
-
-.mt-28{
-  margin-top: 7rem;
-}
-
-.mt-16{
-  margin-top: 4rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
-.ml-28{
-  margin-left: 7rem;
-}
-
-.mr-28{
-  margin-right: 7rem;
-}
-
-.mr-20{
-  margin-right: 5rem;
 }
 
 .block{
@@ -745,10 +678,6 @@ html {
   display: none;
 }
 
-.h-16{
-  height: 4rem;
-}
-
 .h-20{
   height: 5rem;
 }
@@ -761,26 +690,6 @@ html {
   height: 1rem;
 }
 
-.h-40{
-  height: 10rem;
-}
-
-.h-64{
-  height: 16rem;
-}
-
-.h-72{
-  height: 18rem;
-}
-
-.h-80{
-  height: 20rem;
-}
-
-.w-16{
-  width: 4rem;
-}
-
 .w-20{
   width: 5rem;
 }
@@ -791,34 +700,6 @@ html {
 
 .w-4{
   width: 1rem;
-}
-
-.w-40{
-  width: 10rem;
-}
-
-.w-64{
-  width: 16rem;
-}
-
-.w-80{
-  width: 20rem;
-}
-
-.w-full{
-  width: 100%;
-}
-
-.w-2\/6{
-  width: 33.333333%;
-}
-
-.max-w-md{
-  max-width: 28rem;
-}
-
-.max-w-sm{
-  max-width: 24rem;
 }
 
 .-translate-x-1\/2{
@@ -850,20 +731,18 @@ html {
   justify-content: space-between;
 }
 
-.justify-evenly{
-  justify-content: space-evenly;
-}
-
-.gap-2{
-  gap: 0.5rem;
-}
-
 .gap-4{
   gap: 1rem;
 }
 
 .gap-5{
   gap: 1.25rem;
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-5 > :not([hidden]) ~ :not([hidden]){
@@ -884,24 +763,12 @@ html {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.space-x-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-3 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .self-end{
   align-self: flex-end;
 }
 
-.rounded{
-  border-radius: 0.25rem;
+.overflow-hidden{
+  overflow: hidden;
 }
 
 .rounded-2xl{
@@ -916,18 +783,9 @@ html {
   border-radius: 0.5rem;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-green-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
 .bg-green-900{
@@ -940,39 +798,22 @@ html {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.fill-green-600{
-  fill: #16a34a;
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-.p-10{
-  padding: 2.5rem;
+.object-center{
+  -o-object-position: center;
+     object-position: center;
 }
 
 .p-2{
   padding: 0.5rem;
 }
 
-.p-3{
-  padding: 0.75rem;
-}
-
 .p-4{
   padding: 1rem;
-}
-
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .py-6{
@@ -980,32 +821,41 @@ html {
   padding-bottom: 1.5rem;
 }
 
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
+.pb-7{
+  padding-bottom: 1.75rem;
+}
+
+.pr-3{
+  padding-right: 0.75rem;
+}
+
+.pt-12{
+  padding-top: 3rem;
+}
+
 .pt-6{
   padding-top: 1.5rem;
 }
 
-.pt-4{
-  padding-top: 1rem;
-}
-
-.pt-0{
-  padding-top: 0px;
+.text-left{
+  text-align: left;
 }
 
 .text-center{
   text-align: center;
 }
 
-.text-justify{
-  text-align: justify;
-}
-
 .font-inter{
   font-family: Inter, sans-serif;
-}
-
-.font-karla{
-  font-family: Karla, sans-serif;
 }
 
 .font-poppins{
@@ -1027,9 +877,9 @@ html {
   line-height: 2.5rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-xl{
@@ -1037,17 +887,8 @@ html {
   line-height: 1.75rem;
 }
 
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .font-bold{
   font-weight: 700;
-}
-
-.italic{
-  font-style: italic;
 }
 
 .text-green-600{
@@ -1072,12 +913,6 @@ html {
 
 .opacity-75{
   opacity: 0.75;
-}
-
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .drop-shadow-md{
@@ -1225,44 +1060,12 @@ html {
     margin-bottom: 0px;
   }
 
-  .md\:ml-0{
-    margin-left: 0px;
-  }
-
-  .md\:mr-1{
-    margin-right: 0.25rem;
-  }
-
-  .md\:mt-0{
-    margin-top: 0px;
-  }
-
   .md\:flex{
     display: flex;
   }
 
   .md\:hidden{
     display: none;
-  }
-
-  .md\:h-96{
-    height: 24rem;
-  }
-
-  .md\:h-16{
-    height: 4rem;
-  }
-
-  .md\:w-0{
-    width: 0px;
-  }
-
-  .md\:w-auto{
-    width: auto;
-  }
-
-  .md\:w-2\/6{
-    width: 33.333333%;
   }
 
   .md\:max-w-md{
@@ -1277,10 +1080,6 @@ html {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .md\:grid-cols-4{
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
   .md\:justify-start{
     justify-content: flex-start;
   }
@@ -1289,27 +1088,9 @@ html {
     font-size: 1.5rem;
     line-height: 2rem;
   }
-
-  .md\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
 }
 
 @media (min-width: 976px){
-  .lg\:mr-8{
-    margin-right: 2rem;
-  }
-
-  .lg\:pr-20{
-    padding-right: 5rem;
-  }
-
-  .lg\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
   .lg\:text-5xl{
     font-size: 3rem;
     line-height: 1;
@@ -1318,18 +1099,6 @@ html {
   .lg\:text-6xl{
     font-size: 3.75rem;
     line-height: 1;
-  }
-}
-
-@media (min-width: 1440px){
-  .xl\:mx-24{
-    margin-left: 6rem;
-    margin-right: 6rem;
-  }
-
-  .xl\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 }
 
