--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,10 @@
     
 }
 
+.btn {
+    border-radius: 20px !important;
+}
+
 .img_round{
     border: 1px solid;
     border-radius: 10px !important;
@@ -366,7 +370,7 @@
 .menu_icon {
     width: 24px;
     height: 24px;
-    margin-left: 8px;
+    margin-left: 2px;
 }
 
 
@@ -447,4 +451,8 @@
         border:0; 
         width: 300px;
     }
+
+    .menu_icon {
+    margin-right: 2px;
+}
 }
