--- a/css/style.css
+++ b/css/style.css
@@ -384,6 +384,11 @@
     height: 16px;
     margin-left: 2px;
 }
+
+.menu_img_icon {
+    width: 26px;
+    height: 26px;
+}
 .menu_pepper_icon {
     width: 8px;
     height: 16px;
